# OmniLRS

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  artefacts.yaml  download_external.bash  license  pixi.toml  pyproject.toml  run.py
.github/workflows/: ruff.yaml
assets/: __init__.py
assets-EX1/: ex1-withoutsubgraphs.usd  ex1.usd
assets/Textures/: LunarRegolith8k.mdl
cfg/: config.yaml
cfg/controller/: husky-controller.yaml  pragyaan-controller.yaml
cfg/environment/: largescale.yaml  largescale_200km.yaml  largescale_alt_rocks.yaml  largescale_with_lander.yaml  largescale_workshop.yaml  largescale_zenoh.yaml  lunalab.yaml  lunalab4SDG.yaml  lunalab_deformable.yaml  lunalab_workshop.yaml  lunalab_zenoh.yaml  lunar_terrain.yaml  lunaryard_100m.yaml  lunaryard_20m.yaml  lunaryard_20m4SDG.yaml  lunaryard_20m_deformable.yaml  lunaryard_20m_zenoh.yaml  lunaryard_40m.yaml  lunaryard_40m_deformable.yaml  lunaryard_40m_workshop.yaml  lunaryard_40m_workshop_full.yaml  lunaryard_40m_workshop_no_robot.yaml  lunaryard_80m.yaml  lunaryard_terra.yaml  lunaryard_terra_minimalist.yaml  workshop.yaml
cfg/mdb/: rover.xml
cfg/mode/: ROS2.yaml  SDG.yaml  Yamcs.yaml  Zenoh.yaml
cfg/physics/: default_physics.yaml
cfg/rendering/: ray_tracing.yaml
cfg/robot/: ex1.yaml  husky.yaml  pragyaan.yaml
ci.docker/: Dockerfile  Dockerfile.base  README.md
docs/source/: index.rst
omnilrs.docker/: Dockerfile  entrypoint.sh  run_docker.sh
scripts/: activate_isaac_ros.sh  extract_dems.sh  extract_dems_override.sh  fix_yamcs_tmp.sh  generate_dem_previews.py  install_native.sh  preprocess_dem.py  process_info.py
scripts/zenoh/: pub_randomize_rocks.py  sub_camera.py
spaceros_demo.docker/: Dockerfile  entrypoint.sh  run_docker.sh
src/: __init__.py
src/configurations/: __init__.py  auto_labeling_confs.py  environments.py  physics_confs.py  procedural_terrain_confs.py  rendering_confs.py  robot_confs.py  (+3 more)
test/: README.md  conftest.py  test_ros2_sanity.py
(+170 files in other folders)
