[project]
name = "OmniLRS"
version = "2.0.0"
description = "A IsaacSim based lunar simulator for rover locomotion."
requires-python = ">=3.10"
keywords = ["lunar", "simulator", "rover", "locomotion", "IsaacSim"]
authors = [
    { name = "Antoine Richard", email = "antoine.richard@uni.lu" },
    { name = "Junnosuke Kamohara", email = "jkamohara3@gatech.edu" },
]

dependencies = [
    "skyfield",
    "zfpy",
    "warp-lang",
    "numba",
    "gdown",
    "gdal",
    "omegaconf",
    "hydra-core",
    "opencv-python",
]

[tool.ruff]
line-length = 120
target-version = "py311"
# WorldBuilders is a vendored git submodule — don't lint/format third-party code.
extend-exclude = ["WorldBuilders"]

[tool.ruff.lint]
# Start minimal: Pyflakes (real bugs / dead code) + import sorting (I).
# Expand to the pycodestyle `E` rules in follow-up PRs once the baseline is green.
select = ["F", "I"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
